Docker compose yml pgadmin fixed

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,18 +18,16 @@ services:
     container_name: pgadmin
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4}
-      PGADMIN_DEFAULTPASSWORD: 'False'
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-slashcs7@gmail.com}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin4}
+      PGADMIN_CONFIG_SERVER_MODE: 'False'
     volumes:
       - pgadmin:/var/lib/pgadmin
-
-
     ports:
       - "5050:80"
     networks:
       - postgres
     restart: unless-stopped
-
 
 networks:
   postgres:
