--- a/fraud/src/main/resources/application.properties
+++ b/fraud/src/main/resources/application.properties
@@ -1,11 +1,10 @@
 
-
-spring.application.name=customer
-spring.datasource.url=jdbc:mysql://localhost:3307/customer
+server.servlet.application-display-name=fraud
+spring.datasource.url=jdbc:mysql://localhost:3307/fraud
 spring.datasource.username=root
 spring.datasource.password=password
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-server.port=8082
+server.port=8081
